<resources>
    <!-- General -->
    <string name="app_name">Android Assignment</string>
    <string name="error_message_title">Oops! Something went wrong.</string>
    <string name="error_message_subtitle">Please refresh the page and try again.</string>
    <string name="no_internet">No network connection</string>
    <string name="no_internet_subtitle">Please check your network connection and try again.</string>
    <string name="network_settings">Network settings</string>
    <string name="refresh">Refresh</string>
    <string name="image_content_desc">imageContentDesc</string>
    <string name="our_universe">Our universe</string>

    <!-- Main Screen -->
    <string name="reorder_list">Reorder List</string>
    <string name="latest">Latest</string>
    <string name="empty_list_message">No pictures found</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="reorder_by_date">Reorder by date</string>
    <string name="reorder_by_title">Reorder by title</string>
    <string name="favorite">Favorite</string>

    <!-- Details Screen -->
    <string name="cover_image_desc">coverImageDesc</string>
    <string name="back_content_description">backContentDes</string>

</resources>
